# RM_API2

./: .gitignore  CMakeLists.txt  README.md  getStarted.md  replace_demolib.sh  rm_api2Config.cmake.in
C++/include/: rm_define.h  rm_interface.h  rm_interface_internal.h  rm_service.h  rm_service_internal.h
C++/windows/win_x64_c++_debug_v1.0.5/: api_cpp.ilk  api_cpp.lib
C++/windows/win_x64_c++_debug_v1.0.6/: api_cpp.ilk
C++/windows/win_x64_c++_debug_v1.0.7/: api_cpp.ilk
C++/windows/win_x64_c++_debug_v1.1.0/: api_cpp.ilk
C++/windows/win_x64_c++_debug_v1.1.1/: api_cpp.ilk  api_cpp.lib
C++/windows/win_x64_c++_debug_v1.1.2/: api_cpp.ilk  api_cpp.lib
C++/windows/win_x64_c++_debug_v1.1.2.t2/: api_cpp.ilk  api_cpp.lib
C++/windows/win_x64_c++_debug_v1.1.3/: api_cpp.ilk
C++/windows/win_x64_c++_debug_v1.1.4/: api_cpp.ilk
C++/windows/win_x64_c++_debug_vv1.1.5/: api_cpp.ilk
C++/windows/win_x64_c++_v1.0.2/: api_cpp.lib
C++/windows/win_x64_c++_v1.0.3/: api_cpp.lib
C++/windows/win_x64_c++_v1.0.3.t1/: api_cpp.lib
C++/windows/win_x64_c++_v1.0.3.t4/: api_cpp.lib
C++/windows/win_x64_c++_v1.1.4/: api_cpp.lib
C++/windows/win_x64_c_v1.0.0/: api_cpp.lib
C++/windows/win_x86_base_release_v1.0.0/: api_cpp.lib
C++/windows/win_x86_c++_debug_v1.0.5/: api_cpp.ilk
C++/windows/win_x86_c++_debug_v1.0.6/: api_cpp.ilk  api_cpp.lib
C++/windows/win_x86_c++_debug_v1.0.7/: api_cpp.ilk
C++/windows/win_x86_c++_debug_v1.1.0/: api_cpp.ilk  api_cpp.lib
C++/windows/win_x86_c++_debug_v1.1.1/: api_cpp.ilk
C++/windows/win_x86_c++_debug_v1.1.2/: api_cpp.ilk
C++/windows/win_x86_c++_debug_v1.1.2.t2/: api_cpp.ilk
C++/windows/win_x86_c++_debug_v1.1.3/: api_cpp.ilk
C++/windows/win_x86_c++_debug_v1.1.4/: api_cpp.ilk  api_cpp.lib
C++/windows/win_x86_c++_debug_vv1.1.5/: api_cpp.ilk
C++/windows/win_x86_c++_v1.0.3.t1/: api_cpp.lib
C++/windows/win_x86_c++_v1.0.3.t4/: api_cpp.lib
C++/windows/win_x86_c++_v1.0.3.t5/: api_cpp.lib
C++/windows/win_x86_c++_v1.0.4/: api_cpp.lib
C++/windows/win_x86_c++_v1.0.5/: api_cpp.lib
C++/windows/win_x86_c++_v1.0.7/: api_cpp.lib
C++/windows/win_x86_c++_v1.1.1/: api_cpp.lib
C++/windows/win_x86_c++_v1.1.2/: api_cpp.lib
C++/windows/win_x86_c++_v1.1.2.t2/: api_cpp.lib
C++/windows/win_x86_c++_v1.1.3/: api_cpp.lib
C++/windows/win_x86_c++_vv1.1.5/: api_cpp.lib
C++/windows/win_x86_c_v1.0.0/: api_cpp.lib
C/include/: rm_define.h  rm_interface.h  rm_version.h
C/linux/linux_arm64_c_v1.0.3.t5/: libapi_c.so:Zone.Identifier
C/windows/win_x64_c_debug_v1.0.5/: api_c.ilk
C/windows/win_x64_c_debug_v1.0.6/: api_c.ilk  api_c.lib
C/windows/win_x64_c_debug_v1.0.7/: api_c.ilk
C/windows/win_x64_c_debug_v1.1.0/: api_c.ilk
C/windows/win_x64_c_debug_v1.1.1/: api_c.ilk
C/windows/win_x64_c_debug_v1.1.2/: api_c.ilk
C/windows/win_x64_c_debug_v1.1.2.t2/: api_c.ilk
C/windows/win_x64_c_debug_v1.1.3/: api_c.ilk
C/windows/win_x64_c_debug_v1.1.4/: api_c.ilk  api_c.lib
C/windows/win_x64_c_debug_vv1.1.5/: api_c.ilk
C/windows/win_x64_c_v1.0.0/: api_c.lib
C/windows/win_x64_c_v1.0.3.t1/: api_c.lib
C/windows/win_x64_c_v1.1.2/: api_c.lib
C/windows/win_x64_c_v1.1.3/: api_c.lib
C/windows/win_x86_base_release_v1.0.0/: api_c.lib
C/windows/win_x86_c_debug_v1.0.5/: api_c.ilk
C/windows/win_x86_c_debug_v1.0.6/: api_c.ilk
C/windows/win_x86_c_debug_v1.0.7/: api_c.ilk  api_c.lib
C/windows/win_x86_c_debug_v1.1.0/: api_c.ilk  api_c.lib
C/windows/win_x86_c_debug_v1.1.1/: api_c.ilk
C/windows/win_x86_c_debug_v1.1.2/: api_c.ilk  api_c.lib
C/windows/win_x86_c_debug_v1.1.2.t2/: api_c.ilk
C/windows/win_x86_c_debug_v1.1.3/: api_c.ilk
C/windows/win_x86_c_debug_v1.1.4/: api_c.ilk  api_c.lib
C/windows/win_x86_c_debug_vv1.1.5/: api_c.ilk
C/windows/win_x86_c_v1.0.0/: api_c.lib
Demo/RMDemo_C/RMDemo_Lift/: CMakeLists.txt  readme.md  run.bat  run.sh
Demo/RMDemo_C/RMDemo_Lift/Robotic_Arm/include/: rm_interface.h
Demo/RMDemo_C/RMDemo_Lift/src/: main.c
Demo/RMDemo_C/RMDemo_MovejCANFD/: CMakeLists.txt  readme.md
Demo/RMDemo_C/RMDemo_MovejCANFD/Robotic_Arm/include/: rm_define.h
Demo/RMDemo_C/RMDemo_MovejCANFD/Robotic_Arm/lib/: api_c.lib
Demo/RMDemo_C/RMDemo_MovejCANFD/data/: ECO65_canfd_data.txt  RM65&RM63_canfd_data.txt  RM75_canfd_data.txt  robot_log.txt  trajectory.txt
Demo/RMDemo_C/RMDemo_MovejCANFD/src/: main.c
Demo/RMDemo_C/RMDemo_OnlineProgram/: CMakeLists.txt  readme.md  run.sh
Demo/RMDemo_C/RMDemo_OnlineProgram/Robotic_Arm/include/: rm_define.h  rm_interface.h
Demo/RMDemo_C/RMDemo_OnlineProgram/data/: project.txt  trajectory.txt
Demo/RMDemo_C/RMDemo_OnlineProgram/src/: main.c
Demo/RMDemo_CSHARP_Project/: RMDemo_CSHARP_Project.sln  readme.md
Demo/RMDemo_Cpp/RMDemo_AlgoInterface/: CMakeLists.txt  readme.md  run.bat
Demo/RMDemo_Cpp/RMDemo_AlgoInterface/Robotic_Arm/include/: rm_service.h
Demo/RMDemo_Cpp/RMDemo_AlgoInterface/src/: main.cpp
Demo/RMDemo_Cpp/RMDemo_ForceControl/: CMakeLists.txt  readme.md  run.bat
Demo/RMDemo_Cpp/RMDemo_ForceControl/src/: main.cpp
Demo/RMDemo_Cpp/RMDemo_IOControl/: CMakeLists.txt  readme.md  run.bat
Demo/RMDemo_Cpp/RMDemo_IOControl/Robotic_Arm/include/: rm_interface.h  rm_service.h  rm_service_global.h
Demo/RMDemo_Cpp/RMDemo_IOControl/data/: project.txt  trajectory.txt
Demo/RMDemo_Cpp/RMDemo_IOControl/src/: main.cpp
Demo/RMDemo_Cpp/RMDemo_MovejCANFD/: CMakeLists.txt  readme.md  run.bat  run.sh
Demo/RMDemo_Cpp/RMDemo_MovejCANFD/Robotic_Arm/include/: rm_service.h
Demo/RMDemo_Cpp/RMDemo_MovejCANFD/src/: main.cpp
Demo/RMDemo_Cpp/RMDemo_SimpleProcess/: CMakeLists.txt  readme.md  run.bat
Demo/RMDemo_Cpp/RMDemo_SimpleProcess/Robotic_Arm/include/: rm_service.h
Demo/RMDemo_Cpp/RMDemo_SimpleProcess/src/: main.cpp
Demo/RMDemo_Make_Install/: CMakeLists.txt  install.sh  main.c  main.cpp  readme.md  run.sh
Demo/RMDemo_QtExample_C/: RMDemo_QtExample_C.pro  main.cpp  readme.md
Demo/RMDemo_VisualStudio_Project/: RMDemo_VisualStudio_Project.sln  readme.md
Python/: README.md
Python/Robotic_Arm/: rm_ctypes_wrap.py  rm_robot_interface.py  rm_robot_interface_internal.py
(+220 files in other folders)
